// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntensitySparkline Gradient and Markers should handle custom color override 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,20 Q 8.666666666666668,17.964800000000004 13.333333333333334,18.080000000000002 Q 18,17.615360000000006 22.666666666666668,17.696000000000005 Q 27.333333333333336,17.370752000000007 32,17.427200000000006 Q 36.66666666666667,17.199526400000003 41.333333333333336,17.239040000000006 Q 46,17.079668480000002 50.66666666666667,17.107328000000003 Q 55.333333333333336,16.995767936 60,17.0151296 Q 64.66666666666667,16.9370375552 69.33333333333334,16.95059072 Q 74,16.895926288640002 78.66666666666667,16.905413504000002 Q 83.33333333333334,16.867148402048002 88,16.873789452800004 Q 92.66666666666667,16.8470038814336 97.33333333333334,16.851652616960003 Q 102,16.832902717003524 106.66666666666667,16.836156831872003 Q 111.33333333333334,16.825309782310406 116,16.825309782310406"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294901760,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Gradient and Markers should render markers for all readings 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,29.6 Q 8.666666666666668,25.251199999999997 13.333333333333334,26.72 Q 18,21.94784 22.666666666666668,21.824 Q 27.333333333333336,21.747488 32,22.236800000000002 Q 36.66666666666667,20.263241600000004 41.333333333333336,20.605760000000004 Q 46,19.224269120000002 50.66666666666667,19.464032000000003 Q 55.333333333333336,18.496988384 60,18.664822400000002 Q 64.66666666666667,17.987891868800002 69.33333333333334,18.10537568 Q 74,17.631524308160003 78.66666666666667,17.713762976000005 Q 83.33333333333334,17.382067015712003 88,17.439634083200005 Q 92.66666666666667,17.207446910998407 97.33333333333334,17.247743858240007 Q 102,17.085212837698887 106.66666666666667,17.113420700768007 Q 111.33333333333334,17.019394490537604 116,17.019394490537604"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={29.6}
        fill={
          {
            "payload": 4285046584,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={10.399999999999999}
        fill={
          {
            "payload": 4291176488,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Gradient and Markers should render with gradient stroke 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 Q 8.666666666666668,23.500799999999998 13.333333333333334,24.48 Q 18,20.81856 22.666666666666668,21.216 Q 27.333333333333336,19.612992000000002 32,19.891200000000005 Q 36.66666666666667,18.769094400000004 41.333333333333336,18.963840000000005 Q 46,18.178366080000007 50.66666666666667,18.314688000000007 Q 55.333333333333336,17.76485625600001 60,17.860281600000008 Q 64.66666666666667,17.475399379200006 69.33333333333334,17.542197120000008 Q 74,17.272779565440008 78.66666666666667,17.319537984000007 Q 83.33333333333334,17.130945695808006 88,17.16367658880001 Q 92.66666666666667,17.031661987065604 97.33333333333334,17.054573612160006 Q 102,16.962163390945925 106.66666666666667,16.978201528512006 Q 111.33333333333334,16.924741069958404 116,16.924741069958404"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with all intensity markers 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 Q 8.666666666666668,23.500799999999998 13.333333333333334,24.48 Q 18,20.81856 22.666666666666668,21.216 Q 27.333333333333336,20.188992000000002 32,19.891200000000005 Q 36.66666666666667,21.0922944 41.333333333333336,20.883840000000003 Q 46,21.72460608 50.66666666666667,21.578688000000003 Q 55.333333333333336,22.167224256 60,22.065081600000003 Q 64.66666666666667,22.477056979200004 69.33333333333334,22.405557120000005 Q 74,22.693939885440003 78.66666666666667,22.643889984000005 Q 83.33333333333334,22.845757919808 88,22.810722988800002 Q 92.66666666666667,22.9520305438656 97.33333333333334,22.927506092160005 Q 102,23.02642138070592 106.66666666666667,23.009254264512002 Q 111.33333333333334,23.066477985158404 116,23.066477985158404"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with custom color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 Q 8.666666666666668,23.500799999999998 13.333333333333334,24.48 Q 18,20.53056 22.666666666666668,21.216 Q 27.333333333333336,18.451392 32,18.9312 Q 36.66666666666667,16.995974399999998 41.333333333333336,17.33184 Q 46,15.97718208 50.66666666666667,16.212288 Q 55.333333333333336,15.264027456 60,15.4286016 Q 64.66666666666667,14.764819219200003 69.33333333333334,14.880021120000002 Q 74,14.415373453440003 78.66666666666667,14.496014784000003 Q 83.33333333333334,14.170761417408002 88,14.227210348800003 Q 92.66666666666667,13.9995329921856 97.33333333333334,14.039047244160002 Q 102,13.879673094529918 106.66666666666667,13.907333070912 Q 111.33333333333334,13.815133149638399 116,13.815133149638399"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with typical intensity pattern 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 Q 8.666666666666668,23.500799999999998 13.333333333333334,24.48 Q 18,19.95456 22.666666666666668,21.216 Q 27.333333333333336,16.416192000000002 32,17.011200000000002 Q 36.66666666666667,15.187334400000005 41.333333333333336,15.027840000000005 Q 46,16.247134080000006 50.66666666666667,15.559488000000005 Q 55.333333333333336,18.332993856 60,17.851641600000004 Q 64.66666666666667,19.793095699200002 69.33333333333334,19.456149120000003 Q 74,20.81516698944 78.66666666666667,20.579304384000004 Q 83.33333333333334,21.530616892608002 88,21.365513068800002 Q 92.66666666666667,22.031431824825603 97.33333333333334,21.915859148160003 Q 102,22.38200227737792 106.66666666666667,22.301101403712003 Q 111.33333333333334,22.5707709825984 116,22.5707709825984"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={13.333333333333334}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={22.666666666666668}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={32}
        cy={7.199999999999999}
        fill={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={41.333333333333336}
        cy={10.399999999999999}
        fill={
          {
            "payload": 4291176488,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={50.66666666666667}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
